--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -47,15 +47,12 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-      
-    - name: dummy
-      run: ls
 
     - name: Push image to Docker
       uses: docker/build-push-action@v4
       with:
         context: .
-        file: ./Dockerfile
+        file: ./DockerFile
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/flaskapp:latest
 
